updated with the latest required test cases and other requirements

--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -49,6 +49,8 @@
       <pre id="intel" class="intel"></pre>
       <h3>Extended Intelligence</h3>
       <pre id="intelExtended" class="intel"></pre>
+      <h3>Final Output</h3>
+      <pre id="finalOutput" class="intel"></pre>
     </section>
 
     <section class="panel">
